14 April 2014: Polipo 1.1.0:

  * Proper va_list handling for AMD64 and other RISC-like architectures
    (Juliusz Chroboczek and Aleksandar Kuktin).
  * Implemented work-around for broken Content-Range headers.
  * Use 1024 instead of 32 as the length of the listen queue.
  * Implemented the ability to control the permissions set on the log file.
  * Implemented the ability to scrub private information from logs.
  * Fixed a bug that could cause incorrect logging to syslog (thanks
    to Sami Farin).
  * Tweaked the portable version of mktime_gmt.  This will hopefully
    fix the time issues on Windows.  Thanks to MaxWell and Greg.
  * Changed chunk allocator to use larger arenas on 64-bit arches.
  * Fixed a bug that could prevent saving objects on disk.  Thanks to
    Ming Fu.
  * Fixed a bug that could prevent parsing large headers.  Thanks to
    Ming Fu.
  * Fixed an issue that could cause crash messages to go into the disk
    cache.
  * Fixed a bug that could cause the default chunk memory to be incorrect
    on FreeBSD machines.  Thanks to Frank Behrens.
  * Fixed a number of bugs in the validation of Range requests.  Thanks to
    Ken Brazier.
  * Inhibited range requests for non-200 instances, as this breaks some
    client software.  Thanks to Ken Brazier.
  * Fix a integer overflow in processing client requests.
  * Implement authentication on tunnelled connections.  Thanks to
    Stephen Dolan.
  * Implement ability to include Cache-Control: no-transform in all
    requests.  Thanks to Nick Osborn.
  * Fix a bug in the DNS code that would cause us to ignore CNAMES
    after a DNS timeout.
  * Fixed a crash that occurs when a server sends a malformed
    Cache-Control: header (CVE-2009-3305). Thanks to Stefan Fritsch.
  * Removed support for read-only caches.  Nobody ever used it.
  * Changed the default value of diskCacheWriteoutOnClose to 64kB.
  * Cleaned up naming of Windows support functions. Thanks to Honglei Jiang.