@@ -69,4 +69,4 @@ an example.
 
 
 Juliusz Chroboczek
-<jch@pps.jussieu.fr>
+<jch@pps.univ-paris-diderot.fr>
