@@ -8,7 +8,7 @@ installation) for more information.
 
 Current information about Polipo can be found on the Polipo web page,
 
-    http://www.pps.jussieu.fr/~jch/software/polipo/
+    http://www.pps.univ-paris-diderot.fr/~jch/software/polipo/
 
 Further inquiries should be sent to the Polipo-users mailing list:
 
@@ -18,4 +18,4 @@ Please see the Polipo web page for subscription information.
 
 
 Juliusz Chroboczek
-<jch@pps.jussieu.fr>
+<jch@pps.univ-paris-diderot.fr>
