@@ -1,3 +1,13 @@
+14 May 2014: Polipo 1.1.1:
+
+  * Fix a typo that would cause a crash when connecting to a SOCKS
+    server identified by a DNS CNAME.  Thanks to soflare.
+  * Fix a typo that could cause an infinite loop when tunnelling.
+    Thanks to xnoreq for the extensive debugging session.
+  * Fix incorrect error handling that would cause a crash when sending
+    PUT or POST to the local server.
+  * Various improvements to the Windows port.  Thanks to xnoreq.
+
 14 April 2014: Polipo 1.1.0:
 
   * Proper va_list handling for AMD64 and other RISC-like architectures
